# src

./: .gitignore  .gitmodules  Log.md  MUJOCO_LOG.TXT  README.md  TODO  TODO.md  output.pcd  output.xyz  setup.sh  setup_melodic.sh  setup_noetic.sh
6-robot/atr_pkg/: CMakeLists.txt
6-robot/bodyctrl_msgs/: CMakeLists.txt  README.md  package.xml
6-robot/cv_pkg/: CMakeLists.txt  package.xml
6-robot/hric_msgs/: CMakeLists.txt  README.md  package.xml
6-robot/image_pkg/: CMakeLists.txt
6-robot/nav_pkg/: package.xml
6-robot/qq_msgs/: CMakeLists.txt  package.xml
6-robot/slam_pkg/: package.xml  slam.md
6-robot/ssr_pkg/: CMakeLists.txt  package.xml
6-robot/vel_pkg/: package.xml
FAST_LIO/: CMakeLists.txt
FAST_LIO/config/: stereo_pro.yaml  velodyne.yaml
FAST_LIO/launch/: mapping_velodyne.launch
FAST_LIO/src/: laserMapping.cpp
astar_planner/: CMakeLists.txt  package.xml
astar_planner/include/astar_planner/: astar_3d.h
astar_planner/launch/: planner.launch.xml
astar_planner/src/: astar_3d.cpp  planner_node.cpp
atr_pkg/: CMakeLists.txt  package.xml
atr_pkg/launch/: kai_hei.launch  kai_hei_py.launch
atr_pkg/scripts/: ma_node.py
atr_pkg/src/: ma_node.cpp
cv_pkg/: CMakeLists.txt
cv_pkg/src/: cv_image_node.cpp
data/doc/: fast-lio建图步骤.docx
description/franka_emika_panda/: scene.xml  scene_withcamera.xml
description/tiangong_description/: CMakeLists.txt  package.xml
docs/: .~st-lio建图步骤.docx
image_pkg/: package.xml
image_pkg/scripts/: image_node.py
imu_pkg/: package.xml
imu_pkg/scripts/: imu_node.py
imu_pkg/src/: imu_node.cpp
lidar_pkg/: package.xml
lidar_pkg/scripts/: lidar_contrl.py  lidar_draw360.py  lidar_node.py
lidar_pkg/src/: lidar_node.cpp
livox_ros_driver/: .gitignore  LICENSE.txt
livox_ros_driver/livox_ros_driver/: CMakeLists.txt
map_pkg/: package.xml
map_pkg/scripts/: map_pub_node.py
msckf_vio/launch/: msckf_vio_stereo.launch
nav_pkg/: CMakeLists.txt
nav_pkg/launch/: nav.launch
nav_pkg/rviz/: map_tool.rviz  nav.rviz
nav_pkg/scripts/: nav_client.py  wp_node.py
nav_pkg/src/: nav_client.cpp  wp_node.cpp
pcl_pkg/: CMakeLists.txt  CMakeLists_backup.txt  README.md  package.xml  package_backup.xml
pcl_pkg/config/: default.yaml
pcl_pkg/include/xv_sdk/: PoseStampedConfidence.h  xv_sdk.hpp  xv_sdk_demo_rviz.hpp
pcl_pkg/scripts/: 1_req.txt  pcl_o3d.py  save_pcd.py  slam_path.py  slam_path2.py  tof_point.py  tof_point2.py  tof_slam_filter.py
pcl_pkg/src/: ex1.cpp  ex2.cpp  pcl_save.cpp  pcl_test.cpp  slam_path.cpp  slam_start.cpp  tof_point.cpp  tof_point_color.cpp  tof_point_rgbd.cpp  tof_slam.cpp  tof_slam_color.cpp  tof_slam_filter.cpp  tof_slam_filter2.cpp  tof_slam_filter3.cpp  tof_slam_filter_save.cpp
perception/mid360_locate/: CMakeLists.txt
perception/pointcloud_publisher/: CMakeLists.txt  package.xml
record/: test.py
record/moveit/: ex1.py  test.py
record_cpp/: CMakeLists.txt  package.xml
record_cpp/src/: depth2octomap.cpp  depth2pointcloud.cpp
record_py/: CMakeLists.txt  package.xml
record_py/00publisher/: orientation_pub.py
record_py/00subcriber/: pcd_save.py
record_py/arm_controllers/: arm_controller_bk.py  dual_arm_solver.py
record_py/coordinated/: coordinated_fk.py  coordinated_ik.py
record_py/moveit/: rocket_groot.py
record_py/scripts/: edge.sh  install_octmap.sh  kdl_parser.sh  nlopt.sh  tracikpy.sh
scripts/: edge.sh  install_xvsdk.sh  mid360.sh
slam_pkg/: slam.md
slam_pkg/launch/: gmapping.launch  hector.launch
slam_pkg/rviz/: gmapping.rviz  slam.rviz
ssr_pkg/: CMakeLists.txt  package.xml
ssr_pkg/scripts/: chao_node.py
ssr_pkg/src/: chao_node.cpp  yao_node.cpp
unitree/robocup_g1/: README.md  setup.sh
unitree/robocup_g1/unitree_guide/: CMakeLists.txt
unitree/robocup_g1/unitree_guide/data/config/: rviz.rviz
unitree/robocup_g1/unitree_guide/data/policy/motion/: a1_policy.mnn  actor_1.mnn  actor_1.onnx  x1_policy.mnn
unitree/robocup_g1/unitree_guide/include/FSM/: FSM.h  FSMState.h  State_FixedStand.h  State_Passive.h  State_locomotion.h
unitree/robocup_g1/unitree_guide/include/Utilities/: yaml_parser.h
unitree/robocup_g1/unitree_guide/include/common/: enumClass.h  mathTools.h  mathTypes.h  timeMarker.h
unitree/robocup_g1/unitree_guide/include/control/: ControlFrame.h  CtrlComponents.h
unitree/robocup_g1/unitree_guide/include/interface/: CmdPanel.h  IOInterface.h  IOROS.h  IOSDK.h  KeyBoard.h
unitree/robocup_g1/unitree_guide/include/message/: LowlevelCmd.h  LowlevelState.h  unitree_joystick.h
unitree/robocup_g1/unitree_guide/launch/: a1.gazebo.launch  gazebo.launch  room.launch  rosbag.launch
unitree/robocup_g1/unitree_guide/src/: a1_main.cpp
unitree/robocup_g1/unitree_guide/src/FSM/: FSM.cpp  FSMState.cpp  State_FixedStand.cpp  State_Passive.cpp  State_locomotion.cpp
unitree/robocup_g1/unitree_guide/src/control/: ControlFrame.cpp
unitree/robocup_g1/unitree_guide/src/interface/: IOROS.cpp  IOSDK.cpp  KeyBoard.cpp
ur_record/: 0Debug.md  0README.html  0README.md  api.py  build.py  ex1.py  ex2.py  main.py
ur_record/control/: dual_arm_fk.py
ur_record/controllers/: arm_controller.py  arm_controller_pid.py  arm_controller_service.py  arms_solver.py  dual_arm_fk.py  dual_arm_ik.py  dual_arm_solver.py  dual_arm_tr1.py  dual_arm_tr2_vis.py  pid_controller.py
ur_record/coordinated/: coordinated_control.py
ur_record/mmodules/: gripper.py  inspire_controller.py  inspire_hand.py  inspire_hand_angle_set.py  inspire_hand_error_clear.py  motion_controller.py  motion_mode.py
ur_record/moveit/: ex2.py  moveit_solver.py
ur_record/navigation/: goal_pub.py  goal_sub.py  nav_rosbridge.py
ur_record/rosbridge/: README.md  pub_goal.py  pub_joints.py  pub_msg.py  sub_goal.py  sub_msg.py
ur_record/sensors/: arm_6dof.py  imu_pub.py  orrb_camera.py  orrb_tf.py  pelvis2cam.py
ur_record/tools/: key_ctrl.py  plan.py  rrt.py  trans.py  visual.py
ur_record/tracik/: arm_solver.py  ik_solver1.py  ik_solver2.py  robust_solver.py  robust_tr.py
ur_record/trajectory/: trajectory.py
ur_record/urdf/: robot.urdf
waypoints/: waypoints.xml
(+177 files in other folders)
