<package format="2">
  <name>astar_planner</name>
  <version>0.1.0</version>
  <description>A* path planner for Octomap</description>
  
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <build_depend>eigen</build_depend>
  <build_depend>octomap</build_depend>
  
  <exec_depend>rviz</exec_depend>
</package>